# PolymerAnalysis

./: .gitignore  CMakeLists.txt  README.md  README.me  analyser.py
Analysis/: AnalyseNeighbours.cpp  AnalyseNeighbours.hpp  analyse4ptsuscp.py  analyseMSD.py  analyseOverlapFnc.py  analyser.hpp  analyser.py  main.cpp
Images/: gen_povray_img.py  gen_snaphsot.py
Initial_conditions/: create_init_conditions.py  dummy.xyz  run.sh
Movie/: moviemaker.py
Utility/: basic.hpp  data_structures.hpp  data_structures.py  kdtree.hpp  lammps_dump_to_h5.py  misc_tools.py  plotter.py  read_write.cpp  read_write.hpp  read_write.py
Visualization/: gen_povray_img.py  plot_msd.py  plotter.py
include/: AnalyseAreaDiff.hpp  AnalyseDensityHistogram.hpp  AnalyseEnergySpectrum.hpp  AnalyseInterScattering.hpp  AnalyseLatticeOrder.hpp  AnalyseNeighbours.hpp  AnalysePairCorr.hpp  AnalyseSpatialVelocityCorr.hpp  AnalyseStaticStruct.hpp  AnalyseVelocityStructure.hpp  AnalyseVorticity.hpp  analyser.hpp  basic.hpp  cartesian.hpp  data_separator.py  data_structures.hpp  data_structures.py  kdtree.hpp  lammps_dump_to_h5.py  misc_tools.py  read_write.hpp  read_write.py
src/: Analyse4ptsuscp.py  AnalyseAreaDiff.cpp  AnalyseDensityHistogram.cpp  AnalyseDisplacement.py  AnalyseEnergySpectrum.cpp  AnalyseGyrationTensor.cpp  AnalyseInterScattering.cpp  AnalyseKurtosisSpiralNumber.py  AnalyseLatticeOrder.cpp  AnalyseMSD.py  AnalyseNeighbours.cpp  AnalyseNonGaussian.py  AnalyseOverlapFnc.py  AnalysePairCorr.cpp  AnalyseSpatialVelocityCorr.cpp  AnalyseSpiralNumber.py  AnalyseStaticStruct.cpp  AnalyseVelocityStructure.cpp  AnalyseVorticity.cpp  analyseOverlapFnc.py  analyser.cpp  analyser.py  data_structures.cpp  gen_velocity_grid.cpp  read_write.cpp
src/Initial_conditions/: create_init_conditions.py
src/Visualization/: debug_snapshot.py  gen_povray_img.py  gen_snapshot.py  plot_4ptsuscp.py  plot_area_diff.py  plot_corr_length.py  plot_density_histo.py  plot_displacement_probability.py  plot_empty_space.py  plot_energy.py  plot_energy_probability.py  plot_energy_spectrum.py  plot_enstrophy.py  plot_enstrophy_probability.py  plot_exponents.py  plot_inter_scattering.py  plot_lattice_order.py  plot_msd.py  plot_nongauss.py  plot_num_neighbour.py  plot_num_surface.py  plot_overlap_fnc.py  plot_pair_corr.py  plot_spatial_velocity_corr.py  plot_spiral_number.py  plot_static_struct.py  plot_velocity_structure.py  plotter.py
